--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             --shadow-soft: 0 10px 30px rgba(0, 0, 0, 0.04);
             --shadow-bold: 0 20px 50px rgba(0, 0, 0, 0.1);
             --transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+            --glass: rgba(255, 255, 255, 0.85);
+            --glass-border: rgba(0, 0, 0, 0.05);
+            --glass-blur: blur(16px);
         }
 
         * {
@@ -65,11 +68,11 @@
             top: 0;
             left: 0;
             right: 0;
-            background: rgba(253, 251, 247, 0.8);
-            backdrop-filter: blur(15px);
+            background: var(--glass);
+            backdrop-filter: var(--glass-blur);
             z-index: 1000;
-            padding: 20px 0;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+            padding: 16px 0;
+            border-bottom: 1px solid var(--glass-border);
         }
 
         .nav-content {
@@ -102,8 +105,8 @@
 
         /* Hero Section - Modernized */
         .hero {
-            padding-top: 220px;
-            padding-bottom: 140px;
+            padding-top: 160px;
+            padding-bottom: 100px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -127,20 +130,20 @@
 
         h1 {
             font-family: 'Outfit', sans-serif;
-            font-size: clamp(3.5rem, 9vw, 6.5rem);
+            font-size: clamp(3rem, 7vw, 5.5rem);
             font-weight: 800;
             line-height: 0.95;
             color: var(--primary);
-            margin-bottom: 30px;
-            letter-spacing: -0.05em;
+            margin-bottom: 24px;
+            letter-spacing: -0.04em;
         }
 
         .tagline {
-            font-size: clamp(1.3rem, 3.5vw, 1.8rem);
+            font-size: clamp(1.1rem, 2.5vw, 1.4rem);
             color: var(--text-muted);
             font-weight: 400;
-            max-width: 700px;
-            margin-bottom: 56px;
+            max-width: 650px;
+            margin-bottom: 40px;
             border-left: none;
             padding-left: 0;
             line-height: 1.5;
@@ -184,16 +187,16 @@
         /* Content Section - Asymmetric Layout */
         .story-section {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 80px;
+            grid-template-columns: 1fr 1.2fr;
+            gap: 60px;
             align-items: center;
-            margin-bottom: 120px;
+            margin-bottom: 100px;
         }
 
         .main-card {
             background: var(--white);
-            padding: 60px;
-            border-radius: 40px;
+            padding: 40px;
+            border-radius: 32px;
             box-shadow: var(--shadow-soft);
             border: 1px solid rgba(0, 0, 0, 0.015);
         }
@@ -210,9 +213,9 @@
 
         .legacy-quote {
             font-family: 'Outfit', sans-serif;
-            font-size: 2.2rem;
+            font-size: clamp(1.8rem, 4vw, 2.6rem);
             font-weight: 700;
-            line-height: 1.2;
+            line-height: 1.1;
             color: var(--primary);
             grid-column: span 1;
         }
@@ -224,18 +227,18 @@
         /* Features */
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 40px;
-            margin-top: 100px;
-            margin-bottom: 120px;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            gap: 24px;
+            margin-top: 60px;
+            margin-bottom: 100px;
         }
 
         .feature-item {
             background: var(--white);
-            padding: 40px;
-            border-radius: 30px;
+            padding: 32px;
+            border-radius: 24px;
             transition: var(--transition);
-            border: 1px solid transparent;
+            border: 1px solid rgba(0, 0, 0, 0.02);
             box-shadow: var(--shadow-soft);
         }
 
@@ -273,13 +276,12 @@
             background: #051a11;
             /* Even deeper green */
             color: var(--white);
-            padding: 180px 0;
-            margin: 120px 0;
-            border-radius: 100px;
+            padding: 120px 0;
+            margin: 100px 0;
+            border-radius: 80px;
             position: relative;
             overflow: visible;
-            /* Allow 3D elements to float out slightly */
-            box-shadow: 0 60px 120px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 40px 80px rgba(0, 0, 0, 0.4);
         }
 
         .premium-showcase::before {
@@ -295,7 +297,7 @@
 
         .showcase-header.light h2 {
             color: var(--white);
-            font-size: clamp(3rem, 7vw, 5rem);
+            font-size: clamp(2.5rem, 6vw, 4.5rem);
             letter-spacing: -0.03em;
         }
 
@@ -307,19 +309,19 @@
         .analytical-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 30px;
-            margin-top: 80px;
+            gap: 24px;
+            margin-top: 60px;
         }
 
         .data-card {
-            background: rgba(255, 255, 255, 0.03);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            border-radius: 40px;
-            padding: 40px;
+            background: rgba(255, 255, 255, 0.02);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            border-radius: 32px;
+            padding: 32px;
             transition: var(--transition);
             display: flex;
             flex-direction: column;
-            gap: 24px;
+            gap: 20px;
         }
 
         .data-card:hover {
@@ -448,10 +450,10 @@
 
         /* Footer */
         footer {
-            padding: 100px 0 60px;
+            padding: 80px 0 40px;
             background: #f4efea;
             text-align: center;
-            border-radius: 60px 60px 0 0;
+            border-radius: 48px 48px 0 0;
         }
 
         .support-card {
@@ -459,10 +461,10 @@
             display: inline-flex;
             flex-direction: column;
             align-items: center;
-            padding: 30px 60px;
-            border-radius: 30px;
+            padding: 24px 48px;
+            border-radius: 24px;
             box-shadow: var(--shadow-soft);
-            margin-bottom: 60px;
+            margin-bottom: 40px;
         }
 
         .support-card span {
@@ -713,7 +715,7 @@
 
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="javascript:void(0)" onclick="showComingSoon()">Instagram</a>
+                <a href="https://www.instagram.com/team.plantsaga/" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.linkedin.com/company/plantsaga" target="_blank" rel="noopener">LinkedIn</a>
             </div>
             <p style="margin-top: 40px; font-size: 0.8rem; color: #999;">© 2026 PlantSaga. All rights reserved.</p>
