--- a/share/index.html
+++ b/share/index.html
@@ -28,6 +28,7 @@
             --primary: #22c55e;
             --primary-dark: #16a34a;
             --secondary: #0a2e1f;
+            --sage-bg: #E8EFE8;
             --text-main: #1a202c;
             --text-muted: #64748b;
             --bg-light: #f3f4f6;
@@ -47,7 +48,7 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-light);
+            background-color: var(--sage-bg);
             color: var(--text-main);
             line-height: 1.6;
             display: flex;
@@ -62,9 +63,9 @@
             background: var(--white);
             min-height: 100vh;
             position: relative;
-            box-shadow: 0 0 50px rgba(0, 0, 0, 0.05);
-            padding-bottom: 120px;
-            /* Space for fixed button */
+            box-shadow: 0 0 80px rgba(10, 46, 31, 0.08);
+            display: flex;
+            flex-direction: column;
         }
 
         /* Header */
@@ -73,7 +74,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.04);
+            background: var(--white);
+            z-index: 100;
         }
 
         .nav-logo {
@@ -118,20 +120,19 @@
 
         /* Product Gallery */
         .gallery-wrap {
-            padding: 20px;
-            background: #fafafa;
+            padding: 10px 20px 20px 20px;
+            background: #fff;
         }
 
         .hero-image-container {
             width: 100%;
-            height: 350px;
+            height: 400px;
             background: #fff;
-            border-radius: 20px;
+            border-radius: 24px;
             overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: var(--inner-shadow);
             position: relative;
         }
 
@@ -152,6 +153,7 @@
             margin-top: 16px;
             overflow-x: auto;
             padding: 4px;
+            justify-content: center;
             scrollbar-width: none;
         }
 
@@ -160,33 +162,33 @@
         }
 
         .thumbnail {
-            width: 60px;
-            height: 60px;
+            width: 64px;
+            height: 64px;
             flex-shrink: 0;
-            border-radius: 12px;
-            border: 2px solid transparent;
+            border-radius: 14px;
+            border: 2px solid #f3f4f6;
             cursor: pointer;
             overflow: hidden;
             transition: var(--transition);
             background: #fff;
-            padding: 2px;
         }
 
         .thumbnail.active {
             border-color: var(--primary);
             transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
         }
 
         .thumbnail img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 8px;
         }
 
         /* Plant Details */
         .content {
-            padding: 24px;
+            padding: 0 24px 120px 24px;
+            flex-grow: 1;
         }
 
         .badge-wrap {
@@ -199,9 +201,9 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            background: rgba(34, 197, 94, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
+            background: rgba(34, 197, 94, 0.08);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
             color: var(--primary-dark);
             padding: 8px 16px;
             border-radius: 100px;
@@ -218,7 +220,7 @@
 
         .plant-title {
             font-family: 'Outfit', sans-serif;
-            font-size: 28px;
+            font-size: 32px;
             font-weight: 800;
             color: var(--text-main);
             line-height: 1.1;
@@ -228,15 +230,15 @@
             font-size: 16px;
             color: var(--text-muted);
             font-style: italic;
-            margin-top: 4px;
+            margin-top: 6px;
         }
 
         /* Care Matrix Card */
         .care-card {
             background: #fff;
-            border-radius: 24px;
+            border-radius: 28px;
             padding: 24px;
-            box-shadow: var(--shadow-soft);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.02);
             border: 1px solid rgba(0, 0, 0, 0.03);
             margin-bottom: 30px;
         }
@@ -244,39 +246,39 @@
         .care-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
+            gap: 24px;
         }
 
         .care-item {
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 14px;
         }
 
         .icon-box {
-            width: 40px;
-            height: 40px;
+            width: 44px;
+            height: 44px;
             background: #f8fafc;
-            border-radius: 12px;
+            border-radius: 14px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 20px;
+            font-size: 22px;
         }
 
-        .water i {
+        .water ion-icon {
             color: #3b82f6;
         }
 
-        .light i {
+        .light ion-icon {
             color: #f59e0b;
         }
 
-        .temp i {
+        .temp ion-icon {
             color: #ef4444;
         }
 
-        .humid i {
+        .humid ion-icon {
             color: #06b6d4;
         }
 
@@ -305,38 +307,77 @@
             font-size: 18px;
             font-weight: 700;
             margin-bottom: 12px;
+            color: var(--secondary);
         }
 
         .description {
             font-size: 15px;
             color: #4b5563;
-            line-height: 1.7;
+            line-height: 1.8;
+            margin-bottom: 40px;
+        }
+
+        /* Onboarding Box */
+        .onboarding-box {
+            background: linear-gradient(135deg, rgba(34, 197, 94, 0.05) 0%, rgba(34, 197, 94, 0.02) 100%);
+            border-radius: 24px;
+            padding: 24px;
+            border: 1px dashed rgba(34, 197, 94, 0.3);
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .onboarding-box p {
+            font-size: 14px;
+            color: var(--secondary);
+            font-weight: 500;
+            line-height: 1.6;
         }
 
         /* Fixed Footer */
         .footer-action {
-            position: absolute;
-            bottom: 30px;
-            left: 20px;
-            right: 20px;
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            max-width: 500px;
+            padding: 20px 24px 40px 24px;
+            background: linear-gradient(to top, var(--white) 80%, transparent);
+            z-index: 500;
         }
 
         .btn-main {
             background: var(--primary);
             color: #fff;
             width: 100%;
-            height: 60px;
-            border-radius: 18px;
+            height: 64px;
+            border-radius: 20px;
             font-weight: 700;
-            font-size: 16px;
+            font-size: 17px;
             border: none;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 12px;
             cursor: pointer;
-            box-shadow: 0 15px 30px rgba(34, 197, 94, 0.25);
+            box-shadow: 0 20px 40px rgba(34, 197, 94, 0.3);
             transition: var(--transition);
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 15px rgba(34, 197, 94, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(34, 197, 94, 0);
+            }
         }
 
         .btn-main:active {
@@ -345,7 +386,7 @@
 
         /* Error state */
         .error-msg {
-            padding: 40px;
+            padding: 60px 40px;
             text-align: center;
         }
     </style>
@@ -361,14 +402,16 @@
 
         <div id="loader">
             <div class="plant-loader"></div>
-            <p style="margin-top: 20px; color: var(--text-muted); font-size: 14px; font-weight: 600;">GATHERING GROWTH
-                DATA...</p>
+            <p
+                style="margin-top: 20px; color: var(--text-muted); font-size: 13px; font-weight: 700; letter-spacing: 1px;">
+                SYNCING BOTANICAL DATA...</p>
         </div>
 
         <div id="main-content" style="display: none;">
             <div class="gallery-wrap">
                 <div class="hero-image-container">
-                    <img id="hero-image" src="" class="hero-image" alt="Plant Preview">
+                    <img id="hero-image" src="" class="hero-image" alt="Plant Preview"
+                        onerror="this.src='https://plantsaga.com/logo.png'">
                 </div>
                 <div class="thumbnail-row" id="thumbnail-row">
                     <!-- Thumbnails Injected -->
@@ -378,7 +421,7 @@
             <div class="content">
                 <div class="badge-wrap">
                     <div class="badge">
-                        <ion-icon name="sparkles"></ion-icon>
+                        <ion-icon name="leaf"></ion-icon>
                         Shared via PlantSaga
                     </div>
                 </div>
@@ -425,11 +468,20 @@
                     <h3>About Plant</h3>
                     <p class="description" id="description">-</p>
                 </div>
+
+                <div class="onboarding-box">
+                    <p>
+                        Your friend's garden is growing on PlantSaga! 🌿 <br><br>
+                        Join our community to save this plant, get expert care reminders, and start your own flourishing
+                        home garden. Download, login, and click the original link to bring this specimen into your
+                        digital collection.
+                    </p>
+                </div>
             </div>
 
             <div class="footer-action">
                 <button class="btn-main" onclick="launchApp()">
-                    <ion-icon name="save-outline" style="font-size: 20px;"></ion-icon>
+                    <ion-icon name="download-outline" style="font-size: 20px;"></ion-icon>
                     Open in App to Save
                 </button>
             </div>
@@ -466,22 +518,28 @@
         const uid = params.get('uid');
 
         async function init() {
-            if (!pid) return showError("No specimen ID provided.");
-            console.log("Fetching PID:", pid, "UID:", uid);
+            if (!pid) return showError("No specimen ID provided in the link.");
+            console.log("Processing PID:", pid, "| UID:", uid);
 
             try {
                 let data = null;
-                // 1. Global
+                // 1. Try Global Collection
                 const gRef = doc(db, "globalPlants", pid);
                 const gSnap = await getDoc(gRef);
+
                 if (gSnap.exists()) {
+                    console.log("✅ Data found in globalPlants");
                     data = gSnap.data();
                 } else if (uid) {
-                    // 2. User Path
+                    // 2. Try User Specific Collection
+                    console.log("🔍 Searching user document: users/" + uid + "/plants/" + pid);
                     const uRef = doc(db, "users", uid, "plants", pid);
                     const uSnap = await getDoc(uRef);
+
                     if (uSnap.exists()) {
+                        console.log("✅ Data found in user plants");
                         const raw = uSnap.data();
+                        // Mix with global if linked
                         if (raw.globalPlantId) {
                             const ref = await getDoc(doc(db, "globalPlants", raw.globalPlantId));
                             data = { ...ref.data(), ...raw };
@@ -492,27 +550,38 @@
                 }
 
                 if (data) populate(data);
-                else showError("Specimen not found. It may be private or removed.");
+                else showError("Specimen not found. It may be part of a private collection.");
             } catch (e) {
-                console.error("Fetch Error:", e);
-                showError("Error connecting to PlantSaga network.");
+                console.error("Firebase Error:", e);
+                if (e.code === 'permission-denied') {
+                    showError("Access restricted. Sign in to PlantSaga app to view.");
+                } else {
+                    showError("Connection issues. Please try again.");
+                }
             }
         }
 
         function populate(d) {
-            document.getElementById('plant-name').innerText = d.nickname || d.name;
-            document.getElementById('sci-name').innerText = d.scientificName || "";
-            document.getElementById('description').innerText = d.description || (d.notes && d.notes.length > 0 ? d.notes[0] : "Discover more about this specimen in the app.");
+            document.getElementById('plant-name').innerText = d.nickname || d.name || "Unnamed Specimen";
+            document.getElementById('sci-name').innerText = d.scientificName || "Botanical details in app";
 
+            // Description Fallback Logic
+            const desc = d._cachedDescription || d.description || (d.notes && d.notes.length > 0 ? d.notes[0] : null);
+            document.getElementById('description').innerText = desc || "A beautiful specimen being nurtured in a private collection.";
+
+            // Care Stats
             const c = d.careInstructions || {};
-            document.getElementById('water').innerText = c.watering?.frequency || "As needed";
-            document.getElementById('light').innerText = c.sunlight?.requirement || "Medium";
-            document.getElementById('temp').innerText = c.temperature ? `${c.temperature.min}-${c.temperature.max}°C` : "18-26°C";
+            document.getElementById('water').innerText = c.watering?.frequency || "Check Soil";
+            document.getElementById('light').innerText = c.sunlight?.requirement || "Partial Light";
+            document.getElementById('temp').innerText = c.temperature ? `${c.temperature.min}-${c.temperature.max}°C` : "Room Temp";
             document.getElementById('humidity').innerText = c.humidity?.requirement || "Normal";
 
-            // Gallery
+            // Gallery Management
             const photos = d.photos ? d.photos.map(p => p.url) : (d.images || []);
             if (photos.length === 0) photos.push('https://plantsaga.com/logo.png');
+
+            // Clean up to max 4 for optimal speed, but keep more if interactive is desired
+            const displayPhotos = photos.slice(0, 4);
 
             const hero = document.getElementById('hero-image');
             const thumbRow = document.getElementById('thumbnail-row');
@@ -522,16 +591,16 @@
             if (photos.length > 1) {
                 thumbRow.innerHTML = photos.map((url, i) => `
                     <div class="thumbnail ${i === 0 ? 'active' : ''}" onclick="switchHero('${url}', this)">
-                        <img src="${url}">
+                        <img src="${url}" loading="lazy">
                     </div>
                 `).join('');
             } else {
                 thumbRow.style.display = 'none';
             }
 
-            // SEO
-            document.title = `${d.name} | PlantSaga`;
-            document.getElementById('og-title').content = `${d.name} on PlantSaga`;
+            // Social & SEO Fix
+            document.title = `${d.nickname || d.name} | PlantSaga`;
+            document.getElementById('og-title').content = `${d.nickname || d.name} on PlantSaga`;
             document.getElementById('og-image').content = photos[0];
 
             hideLoader();
@@ -541,13 +610,10 @@
             const hero = document.getElementById('hero-image');
             if (hero.src === url) return;
 
-            // Fade transition
             hero.classList.add('fade-out');
             setTimeout(() => {
                 hero.src = url;
                 hero.classList.remove('fade-out');
-
-                // Active class
                 document.querySelectorAll('.thumbnail').forEach(t => t.classList.remove('active'));
                 el.classList.add('active');
             }, 300);
@@ -556,22 +622,22 @@
         function showError(m) {
             document.getElementById('loader').innerHTML = `
                 <div class="error-msg">
-                    <ion-icon name="alert-circle-outline" style="font-size: 60px; color: #cbd5e1;"></ion-icon>
-                    <h2 style="margin-top: 20px;">Missing Specimen</h2>
-                    <p style="color: #94a3b8; margin-top: 10px;">${m}</p>
-                    <a href="../" style="display:inline-block; margin-top:30px; color:var(--primary); font-weight:700; text-decoration:none;">Return Home</a>
+                    <ion-icon name="close-circle-outline" style="font-size: 64px; color: #e2e8f0;"></ion-icon>
+                    <h2 style="margin-top: 24px; font-family: 'Outfit';">Specimen Missing</h2>
+                    <p style="color: #94a3b8; margin-top: 12px; font-size: 15px;">${m}</p>
+                    <a href="../" style="display:inline-block; margin-top:32px; color:var(--primary); font-weight:700; text-decoration:none; border: 2px solid var(--primary); padding: 12px 24px; border-radius: 14px;">Return Home</a>
                 </div>
             `;
         }
 
         function hideLoader() {
             const l = document.getElementById('loader');
-            l.style.transition = 'opacity 0.6s ease';
+            l.style.transition = 'opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1)';
             l.style.opacity = '0';
             setTimeout(() => {
                 l.style.display = 'none';
                 document.getElementById('main-content').style.display = 'block';
-            }, 600);
+            }, 800);
         }
 
         window.launchApp = () => {
