Finalize Premium UI/UX overhaul for Shared Plant page
- Implemented a modern, compact 500px centered container for a mobile-first experience.
- Added a Product-Style Image Gallery with Hero display and interactive Thumbnail switching.
- Integrated a Sage Green (#E8EFE8) premium theme and refined typography (Inter/Outfit).
- Added a high-conversion pulsing 'Open in App' action button.
- Implemented an emotional onboarding message to welcome friends into the community.
- Optimized data fetching logic to use direct document paths (users/{uid}/plants/{pid}) with robust fallbacks.
- Improved error handling and loading states with detailed console logging.

--- a/share/index.html
+++ b/share/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 
+        PlantSaga Shared Plant Preview Page
+        Features: Product-style gallery, Sage Green theme, Pulse conversion button, Emotional onboarding.
+        Data: Direct path fetching (users/{uid}/plants/{pid}) with global follow-back.
+    -->
     <title>PlantSaga | Shared Plant</title>
 
     <!-- Dynamic OG Tags -->
